# ipyjs

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  ipyjs.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipyjs/: __init__.py  _frontend.py  _version.py  example.py
ipyjs/nbextension/: extension.js
ipyjs/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
